--- a/literate-org.org
+++ b/literate-org.org
@@ -29,6 +29,7 @@
     - [[#__init__][__init__]]
     - [[#__main__][__main__]]
     - [[#literate-module-loader][literate module loader]]
+    - [[#build-hierarchical-code-structure][build hierarchical code structure]]
     - [[#web-server][web server]]
 - [[#emacs-library-for-python-literate-server][Emacs library for python literate server]]
   - [[#import-required-elisp-libraries][Import required elisp libraries]]
@@ -449,13 +450,14 @@ def register_literate_module_finder():
 ***** load python modules from an org file
 #+BEGIN_SRC python
 def load_literate_modules_from_org_file(org_file: str) -> None:
-    org = orgparse.load(org_file)
+    orgparse.load(org_file)
 
 #+END_SRC
 ***** load literate modules form org nodes
 #+BEGIN_SRC python
 def load_literate_modules_from_org_node(node: orgparse.OrgNode) -> None:
-    root_module = LITERATE_ORG_ROOT_MODULE
+    # root_module = LITERATE_ORG_ROOT_MODULE
+    pass
 
 #+END_SRC
 
@@ -465,6 +467,130 @@ def build_org_model_from_local_python_package(package_path: str) -> str:
     pass
 
 #+END_SRC
+*** build hierarchical code structure
+:PROPERTIES:
+:LITERATE_ORG_MODULE: literate_python.sections
+:header-args: :tangle ./literate_python/sections.py
+:END:
+**** Introduction
+The hierarchical code structure is a tree structure that represents the code blocks in an org file.
+We group each code block by a hybrid Approach:
+- Initial Clustering: Use text similarity analysis to generate initial clusters.
+- LLM Refinement: Then, pass the clustered groups to an LLM to refine the groups,
+  suggest task names, or provide explanations for why items are grouped together.
+**** import statements
+#+BEGIN_SRC python
+from sentence_transformers import SentenceTransformer
+from sklearn.cluster import KMeans
+from sklearn.metrics import silhouette_score
+
+#+END_SRC
+**** optimal_clusters
+#+BEGIN_SRC python
+def optimal_clusters(definitions, embeddings, min_k=2, max_k=10, threshold=0.05):
+    """
+    Computes the optimal clusters for the given definitions and embeddings.
+
+    It evaluates KMeans clustering for k in range(min_k, max_k+1) by computing the
+    silhouette score for each k. If a candidate with more clusters has a silhouette score
+    only marginally lower than the best score (within the threshold), it favors the higher k.
+
+    Args:
+        definitions: List of text definitions (e.g. function, class, or constant definitions).
+        embeddings: Numpy array or list of embeddings corresponding to each definition.
+        min_k: Minimum number of clusters to try.
+        max_k: Maximum number of clusters to try.
+        threshold: If the difference between the best score and a candidate score is less than
+                   this threshold, choose the candidate with more clusters.
+
+    Returns:
+        clusters: A dictionary mapping each cluster label to a list of definitions.
+        optimal_k: The optimal number of clusters chosen.
+        scores: A dictionary mapping k to its silhouette score.
+    """
+    scores = {}
+    # Limit max_k to the number of samples
+    max_k = min(max_k, len(embeddings))
+
+    # If too few samples, return one cluster containing all definitions.
+    if len(embeddings) < 2:
+        return {0: definitions}, 1, scores
+
+    best_k = None
+    best_score = -1
+
+    # Evaluate silhouette scores for each candidate k.
+    for k in range(min_k, max_k + 1):
+        kmeans = KMeans(n_clusters=k, random_state=42)
+        labels = kmeans.fit_predict(embeddings)
+        score = silhouette_score(embeddings, labels)
+        scores[k] = score
+        print(f"k={k}, silhouette score={score:.4f}")
+
+        # For the first candidate, simply assign best_k.
+        if best_k is None:
+            best_k = k
+            best_score = score
+        else:
+            # If a candidate has a slightly lower score (within threshold) but with more clusters,
+            # favor it for increased granularity.
+            if score > best_score:
+                best_k = k
+                best_score = score
+            elif (best_score - score) < threshold and k > best_k:
+                best_k = k
+                best_score = score
+
+    optimal_k = best_k
+    print(f"\nOptimal number of clusters chosen: {optimal_k}")
+
+    # Run final clustering with the optimal number of clusters.
+    final_kmeans = KMeans(n_clusters=optimal_k, random_state=42)
+    final_labels = final_kmeans.fit_predict(embeddings)
+
+    # Group definitions by cluster.
+    clusters = {}
+    for label, definition in zip(final_labels, definitions):
+        clusters.setdefault(label, []).append(definition)
+
+    return clusters, optimal_k, scores
+
+#+END_SRC
+**** example
+#+BEGIN_SRC python
+# Example usage:
+def test_optimal_clusters():
+    # Sample list of definitions (could be function/class definitions, etc.)
+    definitions = [
+        "def load_data(filepath):\n    # loads the data from a file",
+        "def preprocess_data(data):\n    # cleans and normalizes the data",
+        "class DataLoader:\n    # class for loading data from various sources",
+        "def train_model(data):\n    # trains a machine learning model",
+        "class ModelTrainer:\n    # class that encapsulates the training logic",
+        "def predict(input):\n    # makes predictions using the trained model",
+        "def render_vue_component(props):\n    // renders a Vue component based on the props",
+        "class VueComponent:\n    // defines a Vue component with state and methods",
+        "def mount_vue_app(selector, component):\n    // mounts a Vue app to the DOM element",
+        # Add more definitions as needed...
+    ]
+
+    # Load a pre-trained model to compute sentence embeddings.
+    model = SentenceTransformer("all-MiniLM-L6-v2")
+    embeddings = model.encode(definitions)
+
+    # Compute optimal clusters.
+    clusters, optimal_k, scores = optimal_clusters(
+        definitions, embeddings, min_k=2, max_k=5, threshold=0.05
+    )
+
+    # Print out the resulting clusters.
+    for cluster_id, items in clusters.items():
+        print(f"\nCluster {cluster_id}:")
+        for item in items:
+            print(f"  - {item}")
+
+#+END_SRC
+
 
 *** web server
 :PROPERTIES:
@@ -476,15 +602,10 @@ def build_org_model_from_local_python_package(package_path: str) -> str:
 import importlib
 import os
 import sys
-import time
-import json
 from flask import Flask, request, jsonify
 
 import traceback
-import builtins
 
-# To convert lisp ratio to python
-import fractions
 from contextlib import redirect_stdout
 from contextlib import redirect_stderr
 from io import StringIO
@@ -564,7 +685,7 @@ def process_a_message(message):
                 if error is None:
                     if type == "eval":
                         exec(compile(code, module_name or "code", "exec"), dict)
-                        result_name = message.get("result-name", "_")
+                        message.get("result-name", "_")
                         result = dict.get("_", None)
                     elif type == "exec":
                         result = exec(
@@ -868,7 +989,6 @@ override our own compilation report.
 :END:
 *** Import required packages
 #+BEGIN_SRC python
-import json
 from inspect import getmembers, isbuiltin, ismethod
 from typing import Dict
 from datetime import datetime
@@ -1040,8 +1160,8 @@ def _(obj: datetime) -> dict:
 
 *** inspect as json
 #+BEGIN_SRC python
-def _pyinspect_json(obj):
-    return json.dumps(_inspect(obj), indent=4, default=lambda o: _pyinspect(o)["value"])
+# def _pyinspect_json(obj):
+#     return json.dumps(_inspect(obj), indent=4, default=lambda o: _pyinspect(o)["value"])
 
 #+END_SRC
 * Sync between org files and source files
