Literate python 0.0.5: Enable auto updating locals in a marimo notebook.

--- a/literate-org.org
+++ b/literate-org.org
@@ -32,6 +32,8 @@
     - [[#literate-module-loader][literate module loader]]
     - [[#build-hierarchical-code-structure][build hierarchical code structure]]
     - [[#web-server][web server]]
+  - [[#tests][Tests]]
+    - [[#test-update-locals-in-marimo-notebook-automatically][test update locals in marimo notebook automatically]]
 - [[#emacs-library-for-python-literate-server][Emacs library for python literate server]]
   - [[#import-required-elisp-libraries][Import required elisp libraries]]
   - [[#utilities][Utilities]]
@@ -416,7 +418,7 @@ For example
 :END:
 **** Assignment __version__
 #+BEGIN_SRC python
-__version__ = "0.0.4"
+__version__ = "0.0.5"
 
 #+END_SRC
 *** __main__
@@ -675,6 +677,7 @@ def test_optimal_clusters():
 :END:
 **** Import statements
 #+BEGIN_SRC python
+import ast
 import importlib
 import os
 import sys
@@ -708,6 +711,44 @@ logger = logging.getLogger(__name__)
 app = Flask(__name__)
 
 #+END_SRC
+**** collect names in a code
+#+BEGIN_SRC python
+def get_top_level_names(code):
+    tree = ast.parse(code)
+    variables = []
+    functions = []
+    classes = []
+
+    for node in tree.body:
+        if isinstance(node, ast.Assign):
+            # Handle assignments like x = 1 or x, y = 2, 3.
+            for target in node.targets:
+                if isinstance(target, ast.Name):
+                    variables.append(target.id)
+                elif isinstance(target, ast.Tuple):
+                    for elt in target.elts:
+                        if isinstance(elt, ast.Name):
+                            variables.append(elt.id)
+        elif isinstance(node, ast.AnnAssign):
+            # Handle annotated assignments like: x: int = 1.
+            if isinstance(node.target, ast.Name):
+                variables.append(node.target.id)
+        elif isinstance(node, ast.FunctionDef):
+            functions.append(node.name)
+        elif isinstance(node, ast.ClassDef):
+            classes.append(node.name)
+
+    return variables, functions, classes
+
+#+END_SRC
+
+**** locals in current port
+#+BEGIN_SRC python
+#: app locals in current port
+server_locals = {}
+
+#+END_SRC
+
 **** ensure a module is loaded
 #+BEGIN_SRC python
 def ensure_module(module_name, module_create_method):
@@ -746,6 +787,7 @@ def process_a_message(message):
     stderr_stream = StringIO()
     error = None
     result = None
+    locals = []
     with redirect_stdout(stdout_stream):
         with redirect_stderr(stderr_stream):
             try:
@@ -758,21 +800,28 @@ def process_a_message(message):
                     module = ensure_module(module_name, module_create_method)
                     dict = module.__dict__
 
-                if error is None:
-                    if type == "eval":
-                        exec(compile(code, module_name or "code", "exec"), dict)
-                        message.get("result-name", "_")
-                        result = dict.get("_", None)
-                    elif type == "exec":
-                        result = exec(
-                            compile(code, module_name or "code", "exec"), dict
-                        )
-                        logger.debug("Executed code: %s,result:%s", code, result)
-                    elif type == "quit":
-                        result = None
-                    else:
-                        error = "Unknown type: {}".format(type)
-                        raise ValueError(error)
+                if type == "eval":
+                    exec(compile(code, module_name or "code", "exec"), dict)
+                    message.get("result-name", "_")
+                    result = dict.get("_", None)
+                elif type == "exec":
+                    result = exec(compile(code, module_name or "code", "exec"), dict)
+                    vars_, funcs, classes = get_top_level_names(code)
+                    for local in vars_ + funcs + classes:
+                        if local in server_locals:
+                            _local = server_locals[local]
+                            if hasattr(_local, "__module__"):
+                                _module_name = _local.__module__
+                                if _module_name == module_name:
+                                    # update the local with the new value
+                                    server_locals[local] = getattr(module, local)
+                                    locals.append(local)
+
+                elif type == "quit":
+                    result = None
+                else:
+                    error = "Unknown type: {}".format(type)
+                    raise ValueError(error)
             except Exception as e:
                 # printing stack trace
                 traceback.print_exc()
@@ -781,6 +830,7 @@ def process_a_message(message):
         return_value = {
             "result": _inspect(result),
             "type": "result",
+            "locals": locals,
             "stdout": stdout_stream.getvalue(),
             "stderr": stderr_stream.getvalue(),
         }
@@ -876,12 +926,28 @@ def status():
 def run_server():
     host = "127.0.0.1"
     port = 7330
-    if "LITERATE_ORG_HOST" in os.environ:
-        host = os.environ["LITERATE_ORG_HOST"]
-    if "LITERATE_ORG_PORT" in os.environ:
-        port = int(os.environ["LITERATE_ORG_PORT"])
+    if "LITERATE_PYTHON_HOST" in os.environ:
+        host = os.environ["LITERATE_PYTHON_HOST"]
+    if "LITERATE_PYTHON_PORT" in os.environ:
+        port = int(os.environ["LITERATE_PYTHON_PORT"])
     register_literate_module_finder()
     app.run(debug=True, port=port, host=host, use_reloader=False)
+
+#+END_SRC
+
+** Tests
+:PROPERTIES:
+:LITERATE_ORG_MODULE: literate_python.tests
+:END:
+*** test update locals in marimo notebook automatically 
+:PROPERTIES:
+:LITERATE_ORG_MODULE: literate_python.tests.test_server
+:header-args: :tangle ./literate_python/tests/test_server.py
+:END:
+**** test1
+#+BEGIN_SRC python
+def test1():
+    print("Hello!")
 
 #+END_SRC
 
@@ -1002,7 +1068,8 @@ override our own compilation report.
         (goto-char (point-max))
         (insert "\n" it "\n")))
     (if (equal type :exec)
-      (message "Executed code block in module %s" module-name)
+      (message "Executed code block in module %s, updated locals %s"
+               module-name (cdr (assoc 'locals resp)))
       (let ((json-encoding-pretty-print t))
         (when (not (equal "none" (cdr (assoc :results block-arguments))))
           (org-babel-insert-result (json-encode (cdr (assoc 'result resp))) '("replace")))
